sdk-docs_versioned_docs/version-19.0.0/enums/Generated/Types/PortfolioTx/PortfolioTx.md
---
id: "PortfolioTx"
title: "Enumeration: PortfolioTx"
sidebar_label: "PortfolioTx"
---

[generated/types](../../../../modules/Generated/Types/Types.md).PortfolioTx

## Enumeration Members

### AcceptPortfolioCustody

• **AcceptPortfolioCustody** = ``"portfolio.acceptPortfolioCustody"``

#### Defined in

[generated/types.ts:599](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L599)

___

### CreatePortfolio

• **CreatePortfolio** = ``"portfolio.createPortfolio"``

#### Defined in

[generated/types.ts:594](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L594)

___

### DeletePortfolio

• **DeletePortfolio** = ``"portfolio.deletePortfolio"``

#### Defined in

[generated/types.ts:595](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L595)

___

### MovePortfolioFunds

• **MovePortfolioFunds** = ``"portfolio.movePortfolioFunds"``

#### Defined in

[generated/types.ts:596](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L596)

___

### QuitPortfolioCustody

• **QuitPortfolioCustody** = ``"portfolio.quitPortfolioCustody"``

#### Defined in

[generated/types.ts:598](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L598)

___

### RenamePortfolio

• **RenamePortfolio** = ``"portfolio.renamePortfolio"``

#### Defined in

[generated/types.ts:597](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L597)
